--- a/style.css
+++ b/style.css
@@ -1,20 +1,48 @@
 table {
     border-collapse: separate; 
-    background: #87CEFA; 
-    border: 3px solid #B0E0E6; 
+    background: white;
+	 background: white;
+    border: 0,5px solid #B0E0E6; 
 	width: 300px;
 	height: 300px;
 	float: left;
+	border: 4px solid white;
 	   }
-
- #rightAdd {
-	 background: #fc0; 
-	 height: 50px;
-	 width: 50px;
- }
-    td {
-    padding: 5px; 
-    border: 1px solid #fff; 
+td {
+	background: #1E90FF; 
+    padding: 1px; 
+    border: 0,5px solid #fff; 
 	height: 50px;
 	width: 50px;
 	}
+.table{
+	position: absolute;
+}
+.add{
+	color: white;
+	background: #FFA500;
+	height: 67px;
+	width: 67px;
+	position: relative;
+    top: 6.5px;
+    left: 297px;
+	}
+.plus{
+	color: white;
+    position: absolute;
+    top: 6px;
+    left: 15px;
+    cursor: pointer;
+    padding: 10px 10px;
+	font-size: 25pt;
+}
+.add1{
+	position: relative;
+	color: white;
+	background: #FFA500;
+	height: 68px;
+	width: 68px;
+	position: relative;
+    top: 229px;
+    left: 7px;
+}
